--- a/hw1/inputs/test1.in
+++ b/hw1/inputs/test1.in
@@ -1,4 +1,3 @@
-3 6 1 3
-7.2 2 0 3
-9.3 4 2 3 4 5
-6.1 7 1 3 4 5 0 1 2
+version https://git-lfs.github.com/spec/v1
+oid sha256:80017145d2a7b2af4002991fd97c4b95627436cb7539214e1e4676700fd5fb17
+size 52
