Finish hw2 easy version

--- a/hw2/makefile
+++ b/hw2/makefile
@@ -1,6 +1,6 @@
 all:
 	mkdir -p bin
-	g++ -std=c++17 src/validate_code.cpp src/*_hw2.cpp -o bin/validate_code
+	g++ -std=c++17 src/validate_code.cpp src/f.cpp src/*_hw2.cpp -o bin/validate_code
 clean:
 	@rm bin/*
 test%:
